# wigglegram_test

./: README.md  index.html
sift/: .gitignore  LICENSE  README.md  benchmark.html  index.html  package.json  tsconfig.json  vite.config.js  vite.lib.config.js
sift/c++/: CMakeLists.txt  README.md
sift/c++/cmake/: FindOpenCV.cmake
sift/c++/scripts/: embed_shaders.py
sift/c++/src/: benchmark_main.cpp  embedded_shaders.h  main.cpp  sift_base.cpp  sift_base.h  sift_default.cpp  sift_default.h  sift_matcher.cpp  sift_matcher.h  sift_packed.cpp  sift_packed.h  utils.cpp  utils.h
sift/c++/tests/: test_invariance.cpp  test_main.cpp  test_matcher.cpp
sift/demos/: benchmark.html  demo_file_io.html  demo_parallel_load.html  demo_stereo_pair.html  demo_viz_pyramid.html  demo_webcam.html  demo_webcam_tracking.html  demo_wigglegram.html  index.html  wigglegram.py
sift/demos/js/: stereo_pair.js  wigglegram.js
sift/docs/: API.md
sift/python/: CMakeLists.txt
sift/python/scripts/: process_folder.py
sift/python/src/: python_bindings.cpp
sift/python/tests/: gen_test_images.py  test_wrapper.py
sift/python/tests/test_output/: test1.sift
sift/scripts/: capture_web_output.js  compare_outputs.py  create_match_test_images.py  create_multi_test_images.py  create_test_image.py  matcher.py  server.py  test_rotation_opencv.py
sift/src/: index.js  matcher-cpu.js  matcher-webgpu.js  matcher.js  parallel-processor.js  sift-cpu.js  sift-webgpu-base.js  sift-webgpu-default.js  sift-webgpu-packed.js  sift.js
sift/src/geometry/: camera_intrinsics.js  homography_matrix.js  normalization.js
sift/src/io/: feature-io.js  match-io.js
sift/src/math/: jacobi.js  matrix.js  rotation.js
sift/src/shaders/common/: constants.wgsl  prepare_dispatch.wgsl  structs.wgsl
sift/src/shaders/detection/default/: blur_horizontal.wgsl  blur_vertical.wgsl  descriptor.wgsl  dog.wgsl  downsample.wgsl  extrema.wgsl  grayscale.wgsl  matcher.wgsl  orientation.wgsl
sift/src/shaders/detection/packed/: blur_horizontal.wgsl  blur_vertical.wgsl  descriptor.wgsl  descriptor_quantized.wgsl  dog.wgsl  downsample.wgsl  extrema.wgsl  grayscale.wgsl  orientation.wgsl
sift/src/shaders/matching/: matcher.wgsl  matcher_guided.wgsl  matcher_quantized.wgsl
sift/src/utils/: texture-pool.js
sift/src/workers/: image-loader.worker.js
sift/styles/: common.css  demo.css  test.css
sift/tests/: benchmark_pool.html  benchmark_quantization.html  example.test.js  index.html  test.html  test_compare.html  test_rotation_invariance.html  test_rotation_invariance_keypoints.html  test_scale_invariance.html  unit-test-detect-compute.html  unit-test.html
sift/tests/temp_test/: img_A.sift  img_B.sift
stereo/: README.md  index.html  main.js  package.json  style.css  vite.config.js
stereo/src/: renderer.js
superpoint/: index_custom.html  main.js  main_test.js
